Bug 416293 - No mapping information for accounts associated with an online account provided by kbanking
Summary: No mapping information for accounts associated with an online account provide...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 4.8.4
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-15 12:56 UTC by Ralf Habacker
Modified: 2020-01-22 09:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments
Screenshot showing ofx online account mapping (15.70 KB, image/png)
2020-01-15 12:56 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-01-15 12:56:29 UTC
Created attachment 125150 [details]
Screenshot showing ofx online account mapping

If a KMymoney account is linked to an OFX online account, you can get information about the link in the "Online settings" tab of the respective account. 
This information is not available for accounts linked to the kbanking plugin.

STEPS TO REPRODUCE
1. start kmymoney
2. open a kmymoney file which contains an account assigned to a kbanking online account or create one
3. Edit the account (open context menu of the related account in the accounts view) and select online settings

OBSERVED RESULT
There are no information about the assigned online account

EXPECTED RESULT
There should be informations about the assigned online account

SOFTWARE/OS VERSIONS
os independent
Comment 1 Ralf Habacker 2020-01-22 09:32:01 UTC
Git commit a8b12904bad445ccdd2746cecc2c239cd1a7c536 by Ralf Habacker.
Committed on 15/01/2020 at 12:58.
Pushed by habacker into branch '4.8'.

Fix 'No mapping information for accounts associated with an online account provided by kbanking'
FIXED-IN:4.8.5

M  +3    -0    kmymoney/plugins/kbanking/dialogs/kbaccountsettings.cpp
M  +61   -0    kmymoney/plugins/kbanking/dialogs/kbaccountsettings.ui

https://commits.kde.org/kmymoney/a8b12904bad445ccdd2746cecc2c239cd1a7c536