Fix 'No mapping information for accounts associated with an online account provided by kbanking'

BUG:416293
FIXED-IN:4.8.5